Add dvc experiments metrics tracking

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,13 +2,18 @@ stages:
   train:
     cmd: python run.py --arg_yaml_file params.yaml
     deps:
-    - run.py
+      - run.py
+      - train.py
+      - reinforce_baselines.py
     params:
-    - problem
-    - problem.problem_params
-    - graph_size
-    - high_value
-    - n_epochs
+      - problem
+      - problem_params
+      - graph_size
+      - high_value
+      - n_epochs
     outs:
-    - logs
-    - outputs
+      - logs
+      - outputs
+    metrics:
+      - scores/scores.json:
+          cache: false
