--- a/params.yaml
+++ b/params.yaml
@@ -30,7 +30,7 @@ load_path: null
 resume: null
 no_tensorboard: false
 no_progress_bar: false
-no_wandb: true
+no_wandb: true    # false
 high_value: 0.5
 
 # Model parameters
