--- a/params.yaml
+++ b/params.yaml
@@ -1,51 +1,51 @@
 # Parameters for DVC pipeline
 
 # Parameters specific to the problem to solve
-problem: 'pcvrp'
+problem: pcvrp
 problem_params:
-  PRICE_MODE: 0
+  PRICE_MODE: 1
 
 # Metric file
-metric_file: 'scores/scores.json'
+metric_file: scores/scores.json
 
 # Training parameters
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: [0, 1, 2]         # Specify a list of int if want model be distributed across gpus, or a single int if not
-run_name: 'run'
-graph_size: 20
+cuda: [1, 2, 3, 4, 5, 6, 7]         # Specify a list of int if want model be distributed across gpus, or a single int if not
+run_name: run
+graph_size: 55
 batch_size: 512
-n_epochs: 30
-epoch_size: 1280000
+n_epochs: 50
+epoch_size: 12800
 val_size: 10000
-val_dataset: null
+val_dataset:
 eval_batch_size: 1024
 checkpoint_encoder: false
-data_distribution: 'saturn'
+data_distribution: saturn
 epoch_start: 0
 checkpoint_epochs: 1
 log_step: 50
-load_path: null
-resume: null
+load_path:
+resume:
 no_tensorboard: false
 no_progress_bar: false
 no_wandb: false
-high_value: 0.5
+high_value: 0.1
 
 # Model parameters
-model: 'attention'
+model: attention
 embedding_dim: 128
 hidden_dim: 128
 n_encode_layers: 3
 tanh_clipping: 10
-normalization: 'batch'
+normalization: batch
 lr_model: 1.0e-4
 lr_critic: 1.0e-4
 lr_decay: 1.0
 max_grad_norm: 1.0
 exp_beta: 0.8
-baseline: 'rollout'
+baseline: rollout
 bl_alpha: 0.05
-bl_warmup_epochs: null
-shrink_size: null
+bl_warmup_epochs:
+shrink_size:
