--- a/params.yaml
+++ b/params.yaml
@@ -4,6 +4,7 @@
 problem: pcvrp
 problem_params:
   PRICE_MODE: 1
+  DISCOUNT_FACTOR: 0.9
 
 # Metric file
 metric_file: scores/scores.json
@@ -12,7 +13,7 @@ metric_file: scores/scores.json
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: [1, 2, 3, 4, 5, 6, 7]         # Specify a list of int if want model be distributed across gpus, or a single int if not
+cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: run
 graph_size: 55 
 batch_size: 512
@@ -30,8 +31,8 @@ load_path:
 resume:
 no_tensorboard: false
 no_progress_bar: false
-no_wandb: false
-high_value: 0.7
+no_wandb: false              # Set to true if don't want to log onto WandB
+high_value: 1
 
 # Model parameters
 model: attention
