--- a/params.yaml
+++ b/params.yaml
@@ -13,9 +13,9 @@ metric_file: scores/scores.json
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
+cuda: [1, 2, 3, 4, 5, 6, 7]         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: run
-graph_size: 55 
+graph_size: 55
 batch_size: 512
 n_epochs: 50
 epoch_size: 12800
