--- a/params.yaml
+++ b/params.yaml
@@ -3,8 +3,8 @@
 # Parameters specific to the problem to solve
 problem: pcvrp
 problem_params:
-  PRICE_MODE: 1
-  DISCOUNT_FACTOR: 0.9
+  PRICE_MODE: 2
+  DISCOUNT_FACTOR: 0.8
 
 # Metric file
 metric_file: scores/scores.json
@@ -13,9 +13,9 @@ metric_file: scores/scores.json
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
+cuda: [1, 2, 3, 4, 5, 6, 7]         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: run
-graph_size: 55 
+graph_size: 55
 batch_size: 512
 n_epochs: 50
 epoch_size: 12800
