--- a/params.yaml
+++ b/params.yaml
@@ -1,12 +1,19 @@
 # Parameters for DVC pipeline
 
 # Parameters specific to the problem to solve
-problem: cvrp
+problem: pcvrp
 problem_params:
   PRICE_MODE: 1
   DISCOUNT_FACTOR: 0.9
   PLAYER_ROLE: 1  # 0: medic, 1: engineer, maybe 2: transporter?
+  medic_model_file: outputs/2021-6-23/graph_size=55,price_mode=1,high_value=1
+  medic_graph_size: 55
+  rubble_graph_size: 23
+  high_value_victim_size: 5
+  medic_speed: 0.0091
+  engineer_speed: 0.0065
   tool_durability: 20
+  distance_ratio: 0.001663
 
 # Metric file
 metric_file: scores/scores.json
@@ -17,7 +24,7 @@ eval_only: false
 no_cuda: false
 cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: run
-graph_size: 55 
+graph_size: 28
 batch_size: 512
 n_epochs: 50
 epoch_size: 12800
