--- a/params.yaml
+++ b/params.yaml
@@ -3,20 +3,20 @@
 # Parameters specific to the problem to solve
 problem: pcvrp
 problem_params:
-  PRICE_MODE: 1
-  DISCOUNT_FACTOR: 0.9
+  PRICE_MODE: 1           # for pcvrp medic
+  DISCOUNT_FACTOR: 0.9    # for pcvrp medic
   PLAYER_ROLE: engineer  # medic, engineer, maybe searcher?
   MEDIC_MODEL_FILE: outputs/2021-6-23/graph_size=55,price_mode=1,high_value=1
-  MEDIC_GRAPH_SIZE: 55
-  RUBBLE_GRAPH_SIZE: 23
-  HIGH_VALUE_VICTIM_SIZE: 5
-  MEDIC_SPEED: 0.0091
-  ENGINEER_SPEED: 0.0065
+  MEDIC_GRAPH_SIZE: 55        # number of victims (contains high value)
+  RUBBLE_GRAPH_SIZE: 23       # number of rubbles
+  HIGH_VALUE_VICTIM_SIZE: 5   # number of high value victims
+  MEDIC_SPEED: 0.0091         # medic speed after conversion
+  ENGINEER_SPEED: 0.0065      # engineer speed after conversion
   MEDIC_TOOL_DURABILITY: 20
   ENGINEER_TOOL_DURABILITY: 131
-  DISTANCE_RATIO: 0.001663
-  HIGH_VALUE_MISMATCH_PENALTY_COEFF: 0.004
-  LATE_RUBBLE_PENALTY_COEFF: 1.757
+  DISTANCE_RATIO: 0.001663    # Saturn to 2D[0-1] conversion factor
+  HIGH_VALUE_MISMATCH_PENALTY_COEFF: 0.004  # coefficient 1
+  LATE_RUBBLE_PENALTY_COEFF: 1.757          # coefficient 2
 
 # Metric file
 metric_file: scores/scores.json
