--- a/params.yaml
+++ b/params.yaml
@@ -6,7 +6,7 @@ problem_params:
   PRICE_MODE: 1           # for pcvrp medic
   DISCOUNT_FACTOR: 0.9    # for pcvrp medic
   PLAYER_ROLE: engineer  # medic, engineer, maybe searcher?
-  MEDIC_MODEL_FILE: outputs/2021-6-23/graph_size=55,price_mode=1,high_value=1
+  MEDIC_MODEL_FILE: useful_model/pcvrp_medic_PM1_HV1
   MEDIC_GRAPH_SIZE: 55        # number of victims (contains high value)
   RUBBLE_GRAPH_SIZE: 23       # number of rubbles
   HIGH_VALUE_VICTIM_SIZE: 5   # number of high value victims
