Add dvc dependencies and decrease val_size in params.yaml

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -5,6 +5,8 @@ stages:
       - run.py
       - train.py
       - reinforce_baselines.py
+      - problems
+      - pretrained_asist
     params:
       - problem
       - problem_params
