--- a/params.yaml
+++ b/params.yaml
@@ -31,7 +31,7 @@ graph_size: 28
 batch_size: 512
 n_epochs: 50
 epoch_size: 12800
-val_size: 10000
+val_size: 1000             # affect num_samples when collecting problem dataset using baseline
 val_dataset:
 eval_batch_size: 1024
 checkpoint_encoder: false
