--- a/params.yaml
+++ b/params.yaml
@@ -25,7 +25,7 @@ metric_file: scores/scores.json
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
+cuda: [1, 2, 3, 4, 5, 6]         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: engineer_medic
 graph_size: 28
 batch_size: 512
