--- a/params.yaml
+++ b/params.yaml
@@ -10,8 +10,8 @@ problem_params:
   MEDIC_GRAPH_SIZE: 55        # number of victims (contains high value)
   RUBBLE_GRAPH_SIZE: 23       # number of rubbles
   HIGH_VALUE_VICTIM_SIZE: 5   # number of high value victims
-  MEDIC_SPEED: 0.0091         # medic speed after conversion
-  ENGINEER_SPEED: 0.0065      # engineer speed after conversion
+  MEDIC_SPEED: 0.007          # medic speed after conversion
+  ENGINEER_SPEED: 0.005       # engineer speed after conversion
   MEDIC_TOOL_DURABILITY: 20
   ENGINEER_TOOL_DURABILITY: 131
   DISTANCE_RATIO: 0.001663    # Saturn to 2D[0-1] conversion factor
@@ -25,7 +25,7 @@ metric_file: scores/scores.json
 seed: 1234
 eval_only: false
 no_cuda: false
-cuda: 0         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
+cuda: [1, 2, 3, 4, 5, 6]         # Specify a list of int if want model be distributed across gpus, or a single int otherwise
 run_name: engineer_medic
 graph_size: 28
 batch_size: 512
